--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -128,7 +128,7 @@
 
   .hero__container--image {
     height: 528px;
-    background: url(/assets/hero-img.jpg) no-repeat center;
+    background: url(./assets/hero-img.jpg) no-repeat center;
     background-size: cover;
   }
 }
